[package]
name = "handler"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bunt={ version = "*"}
serde = {version = "*"}
serde_json = {version = "*"}
clap = {version = "*", features = ["derive"]}
reqwest = {version = "*", features = ["json"]}
tokio = {version = "*", features = ["full"]}
clipboard = { version = "*"}
inquire = {version = "*", default-features = false, features=["crossterm", "date", "editor"]}
human-panic = "1.1.5"
mongodb = {version="*", features = ["tokio-sync"], default-features = false}
dotenv = {version="*"}
rand = {version="*"}
futures = {version="*"}